# tiny

./: CMakeLists.txt  analyzer.c  analyzer.h  errors.c  errors.h  globals.h  main.c  parser.c  parser.h  scanner.c  scanner.h  symtab.c  symtab.h  utils.c  utils.h
